--- a/src/PlanIt/GuestsBundle/Resources/views/Default/index.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Default/index.html.twig
@@ -31,7 +31,6 @@
 		<div class="row list" id="imac">
 			{# Tête de liste #}
 			<div class="head-list">
-				<div class="name">Amis Imac</div>
 				<form action="">
 				<select name="actions" id="actions">
 						<option value="none">Action</option>
@@ -39,6 +38,7 @@
 						<option value="delete">Supprimer</option>
 				</select>
 				</form>
+				<div class="name">Amis Imac</div>
 				<div class="price">40€/pers</div>
 			</div>
 			{# Labels #}
@@ -64,8 +64,8 @@
 				<div class="confirmed col-md-1"><div class="light yes"></div></div>
 				<div class="payed col-md-1"><div class="light no"></div></div>
 				<div class="payment col-md-2">
-					<form action="">
-					<select name="payment" id="payment">
+					<form action="" id="payment">
+					<select name="payment">
 							<option value="none">Espèce</option>
 							<option value="send">CB</option>
 							<option value="delete">Chèque</option>
@@ -85,8 +85,8 @@
 				<div class="confirmed col-md-1"><div class="light wait"></div></div>
 				<div class="payed col-md-1"><div class="light no"></div></div>
 				<div class="payment col-md-2">
-					<form action="">
-					<select name="payment" id="payment">
+					<form action="" id="payment">
+					<select name="payment">
 							<option value="none">Espèce</option>
 							<option value="send">CB</option>
 							<option value="delete">Chèque</option>
