--- a/src/PlanIt/GuestsBundle/Resources/views/layout.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/layout.html.twig
@@ -2,11 +2,12 @@
 
  {% block javascripts %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
-    {# {% javascripts '@PlanItGuestsBundle/Resources/views/templates/guests.html.twig' filter="twig_js, ?yui_js" %}
+{#     {% javascripts '@PlanItGuestsBundle/Resources/views/templates/guests.html.twig' filter="twig_js, ?yui_js" %}
           <script language="javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %} #}
     {% javascripts 
     '%kernel.root_dir%/Resources/js/*.js'
+    '@PlanItGuestsBundle/Resources/public/js/*.js'
     %}
 	   <script type="text/javascript" src="{{ asset_url }}"></script>
 	{% endjavascripts %}
