--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Plan It{% endblock %}</title>
         {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('css/selectize.css') }}">
             <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
             <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
             <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -54,6 +55,7 @@
             {% endjavascripts %}
           
             <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+            <script src="{{ asset('js/selectize.js') }}"></script>
             {% javascripts
                 '%kernel.root_dir%/Resources/js/*.js'
             %}
