--- a/src/PlanIt/EventBundle/Resources/views/templates/general/content.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/templates/general/content.html.twig
@@ -36,36 +36,16 @@
 </div>
 
 <div class="row">
-	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module" >
-		<div id="module_invite">
-			<img src="/images/event/pictos_modules/picto_invite.png" /> 	
-			<p>Gestion des invités</p>    	
-		</div>	
-	</div>
-	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module">
-		<div id="module_budget">	
-			<img src="/images/event/pictos_modules/picto_budget.png" /> 
-    		<p>Gestion du budget</p>
-		</div>      		
-	</div>
-	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module">
-		<div id="module_lieu">
-			<img src="/images/event/pictos_modules/picto_lieu.png" /> 	 
-    		<p>Gestion du lieu</p>  
-    	</div>   		
-	</div>
-	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module">	
-		<div id="module_todo">
-			<img src="/images/event/pictos_modules/picto_todo.png" /> 
-    		<p>Todo list</p> 
-    	</div>     		
-	</div>
-	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module">
-		<div id="module_transport">
-			<img src="/images/event/pictos_modules/picto_transport.png" /> 	
-			<p>Gestion du transport</p> 
-		</div>   		
-	</div>
+	{% for module in evnt.modules %}
+	<a href="/app_dev.php/event/{{evnt.id}}/module/{{module.id}}">
+		<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module" >
+			<div id="module_{{module.type}}">
+				<img src="/images/event/pictos_modules/picto_{{module.type}}.png" /> 	
+				<p>{{module.name}}</p>    	
+			</div>	
+		</div>
+	</a>
+	{% endfor %}
 	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module">	
 		<div id="ajout_module"> 
     		<p>+</p> 
