--- a/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
@@ -3,7 +3,7 @@
 	<div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
 		<div class="event-thumbnail">
 			<div class="head">
-				<h2>{{event.name}}</h2>
+				<h2><a href="/app_dev.php/event/{{event.id}}">{{event.name}}</a></h2>
 				<span class="date">J-5</span>
 			</div>
 			<div class="content">
