--- a/src/PlanIt/EventBundle/Resources/views/templates/general/content.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/templates/general/content.html.twig
@@ -26,7 +26,7 @@
 		</div>
 		<div class="info_dte info_color">
     		<img src="/images/event/info_dte_budget.png" /> 
-    		<p> BUDGET TOTAL </br> <span>36</span> </p>
+    		<p> BALANCE DU BUDGET </br> <span>36</span> </p>
 		</div>
 	</div>
 </div>
