--- a/src/PlanIt/EventBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/EventBundle/Resources/public/css/general.scss
@@ -12,8 +12,8 @@ $neutral: #dfdede;
 $invit_module: #1d89cf;
 $budget_module: #f9de2f;
 $place_module: #857198;
-$todo_module: #dc4888;
-$transport_module : #ff9f37;
+$todo_module: #ff9f37;
+$transport_module : #dc4888;
 $add_module : #f1f1f1;
 
 /*MIXIN*/
