pb couleurs css general

--- a/src/PlanIt/EventBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/EventBundle/Resources/public/css/general.scss
@@ -10,8 +10,8 @@ $negative: #e56454;
 $neutral: #dfdede;
 
 $invit_module: #1d89cf;
-$budget_module: #f9de2f;
-$place_module: #857198;
+$budget_module: #847299;
+$place_module: #f9de2f;
 $todo_module: #ff9f37;
 $transport_module : #dc4888;
 $add_module : #f1f1f1;
