--- a/src/PlanIt/EventBundle/Resources/views/Page/form.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/form.html.twig
@@ -1,6 +1,6 @@
-<form action="" method="post" {{ form_enctype(form) }} class="blogger">
+{# <form action="" method="post" {{ form_enctype(form) }} class="blogger">
     {{ form_widget(form) }}
     <p>
         <input type="submit" value="Submit">
     </p>
-</form>
+</form> #}
