--- a/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
@@ -11,7 +11,7 @@
 {% block content %}
 <div class="container">
 	<div class="row" id="title">
-        <!--Template title.html.twig -->
+        <div class="col-md-12" > <h1>Todo list</h1> </div>
     </div>
 
 	<div class="row" id="separator">
@@ -59,7 +59,7 @@
 
 {% block javascripts %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
-    <script> getEvent({{event_id}}); </script>
+    <script> //getEvent({{event_id}}); </script>
     <script>
 	    $('.sortable').sortable({
 	    	items: ':not(.disabled)'
