--- a/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
@@ -48,8 +48,8 @@
 		</ul>
 
 		 <div class="row">
-	        <div class="col-md-3 col-sm-4 col-xs-12"><button>Ajouter une tâche</button></div>     
-	        <div class="col-md-3 col-sm-4 col-xs-12"><button>Valider</button></div>          
+	        <div class="col-md-3 col-sm-4 col-xs-12 bt_todo"><button>Ajouter une tâche</button></div>     
+	        <div class="col-md-3 col-sm-4 col-xs-12 bt_todo"><button>Valider</button></div>          
 	    </div>
 
 	</section>
