--- a/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
@@ -1,4 +1,3 @@
-<form action="/app_dev.php/api/guests/{{module_id}}" method="post" {{ form_enctype(form) }} class="blogger">
 	<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -6,17 +5,23 @@
                 <h4 class="modal-title" id="myModalLabel">Ajouter un invité</h4>
                 </div>
                 <div class="modal-body">
+                    <form action="/app_dev.php/api/guests/{{module_id}}" method="post" {{ form_enctype(form) }} class="blogger">
+
                 	{{ form_errors(form) }}
-					<input type="hidden" name="type" id="type_added_guest">
-			        {{ form_row(form.firstname) }}
-			        {{ form_row(form.lastname) }}
-			        {{ form_row(form.email) }}
+                    <input type="hidden" name="type" id="type_added_guest">
+                        {{ form_errors(form.firstname) }}
+                        {{ form_widget(form.firstname , { 'attr': {'class': "firstname",'placeholder': "Prénom"} }) }}
+    			        {{ form_errors(form.lastname) }}
+                        {{ form_widget(form.lastname, { 'attr': {'class': "lastname",'placeholder': "Nom"} }) }}
+                        {{ form_errors(form.email) }}
+                        {{ form_widget(form.email, { 'attr': {'class': "email",'placeholder': "Email"} }) }}
 
 				    <p>
-				        <input type="submit" value="Submit">
+				        <input type="submit" value="Ajouter">
 				    </p>
+                    </form>
+
                 </div>
             </div>
       </div>
     </div>
-</form>
