--- a/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
@@ -35,8 +35,8 @@
                     </form>
                     <div class="name col-md-2"><input type="text" value="{{guest.firstname}} {{guest.last}}"></div>
                     <div class="email col-md-3"><input type="text" value="{{guest.email}}"></div>
-                    <div class="confirmed col-md-1"><div class="light state-{{guest.confirmed}}"></div></div>
-                    <div class="payed col-md-1"><div class="light state-{{guest.payed}}"></div></div>
+                    <div class="confirmed col-md-1"><div class="light state-{{guest.confirmed}} data-placement="top" data-original-title="Cliquez pour modifier""></div></div>
+                    <div class="payed col-md-1"><div class="light state-{{guest.payed}} data-placement="top" data-original-title="Cliquez pour modifier""></div></div>
                     <div class="payment col-md-2">
                         <form action="" id="payment">
                         <select name="payment">
