--- a/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
@@ -1,4 +1,4 @@
-<form action="/app_dev.php/api/guests/{{module_id}}" method="post" {{ form_enctype(form) }} class="blogger">
+<form action="/app_dev.php/api/guests/{{module_id}}" method="post" {{ form_enctype(form) }}>
 	<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -7,7 +7,7 @@
                 </div>
                 <div class="modal-body">
                 	{{ form_errors(form) }}
-					<input type="hidden" name="type" id="type_added_guest">
+					<input type="hidden" name="type_guest" id="type_added_guest">
 			        {{ form_row(form.firstname) }}
 			        {{ form_row(form.lastname) }}
 			        {{ form_row(form.email) }}
