--- a/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
@@ -49,7 +49,7 @@
 		        <div class="modal-dialog">
 		            <div class="modal-content">
 		                <div class="modal-header">
-		                <h4 class="modal-title" id="myModalLabel">Ajouter un invité</h4>
+		                <h4 class="modal-title" id="myModalLabel">Ajouter un module</h4>
 		                </div>
 		                <div class="modal-body">
 						<div id="form_container">
