--- a/src/PlanIt/EventBundle/Resources/views/Page/form.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/form.html.twig
@@ -2,9 +2,9 @@
 {# FORM #}	
 <form action="/app_dev.php/api/{{type}}modules/{{event_id}}" method="post" {{ form_enctype(form) }} class="blogger">
     {{ form_widget(form) }}
+
     <p>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Ajouter">
     </p>
 </form>
-
-						
+<script>eventscript();</script>
