--- a/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
@@ -16,7 +16,7 @@
 	</div>
 {% endfor %}
 <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
-	<div class="add event-thumbnail">
+	<div class="add event-thumbnail" data-toggle="modal" data-target="#basicModal">
 		<p> + </p>
 	</div>
 </div>
