--- a/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
@@ -51,7 +51,7 @@
                 </div>
         {% endif %}
     {% endfor %}
-    <div class="col-md-2 pull-right add-guest"><button data-toggle="modal" data-target="#basicModal" data-type="{{type.id}}">Ajouter un invité</button></div>
+    <div class="col-md-2 pull-right add-guest"><button data-toggle="modal" data-target=".addGuestModal" data-type="{{type.id}}">Ajouter un invité</button></div>
     
     </div>
 {% endfor %}
