--- a/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
@@ -1,18 +1,20 @@
 {% twig_js name="events" %}
 {% for event in user_events %}
 	<div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
-		<div class="event-thumbnail">
-			<div class="head">
-				<h2><a href="/app_dev.php/event/{{event.id}}">{{event.name}}</a></h2>
-				<span class="date">J-5</span>
+		<a href="/app_dev.php/event/{{event.id}}">
+			<div class="event-thumbnail">
+				<div class="head">
+					<h2>{{event.name}}</h2>
+					<span class="date">J-5</span>
+				</div>
+				<div class="content">
+					<div class="image-cropper">
+		    		<img src="/images/event/events_pictures/{{event.image}}" /> 
+		    		</div>
+		    		<p class="description">{{ event.description }}</p>
+				</div>
 			</div>
-			<div class="content">
-				<div class="image-cropper">
-	    		<img src="/images/event/events_pictures/{{event.image}}" /> 
-	    		</div>
-	    		<p class="description">{{ event.description }}</p>
-			</div>
-		</div>
+		</a>
 	</div>
 {% endfor %}
 <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
